--- a/ryu/Dockerfile
+++ b/ryu/Dockerfile
@@ -16,4 +16,7 @@ COPY apps /root/apps
 # Add apps to Python path
 ENV PYTHONPATH=/root:$PYTHONPATH
 
-CMD ["ryu-manager", "--observe-links","apps.multipath"]
+#CMD ["ryu-manager", "--observe-links" ,"apps.git_multipath"]
+#CMD ["ryu-manager", "--observe-links","apps.multipath"]
+#CMD ["ryu-manager", "ryu.app.simple_switch_13"]
+CMD ["ryu-manager", "apps.controller", "ryu.app.ofctl_rest"]
